Data Model - Using DraftingGroup enum to define Bandwidth scope possible values
